tests/toylang/neg/001165_mutation.toylang
program a = { int var a : bool; } .
